# crazyradio2-firmware

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE-MIT  README.md  VERSION  enter.sh  justfile  prj.conf  pyproject.toml
.github/workflows/: CI.yml  release.yml
boards/: bitcraze_crazyradio_2.overlay  nrf52840dk_nrf52840.overlay
boards/arm/bitcraze_crazyradio_2/: Kconfig  Kconfig.board  Kconfig.defconfig  bitcraze_crazyradio_2-pinctrl.dtsi  bitcraze_crazyradio_2.dts  bitcraze_crazyradio_2.yaml  bitcraze_crazyradio_2_defconfig  board.cmake  pre_dt_board.cmake
boards/bitcraze/crazyradio2/: Kconfig  Kconfig.crazyradio2  Kconfig.defconfig  board.cmake  board.yml  crazyradio2_nrf52840-pinctrl.dtsi  crazyradio2_nrf52840.dts  crazyradio2_nrf52840_defconfig  pre_dt_board.cmake
docs/: index.md
docs/building-and-flashing/: build.md  flash.md
docs/development/: compatible-usb-protocol.md  cortex-debug.md
docs/functional-areas/: CBOR-RPC.md  usb-api.md  usb-protocol.md
docs/userguides/: index.md
src/: api.c  api.h  button.c  button.h  contwave.c  contwave.h  crusb.c  crusb.h  esb.c  esb.h  fem.c  fem.h  led.c  led.h  legacy_usb.c  main.c  oryx.c  oryx.h  oryx_ll.c  oryx_ll.h  power_measurement.c  power_measurement.h  radio_mode.c  radio_mode.h  radio_nrf5_fem.h  radio_nrf5_fem_generic.h  radio_nrf5_fem_nrf21540.h  rpc.c  rpc.h  system.c  system.h
tools/: west.yml
